--- a/views/Adminlogin.hbs
+++ b/views/Adminlogin.hbs
@@ -110,7 +110,7 @@
                         </div>
                         <div class="forgetpass"><a href="#">Forgot Password?</a></div>
                         <button type="submit" class="btn btn-primary text-center w-100">Submit</button>
-                        <div class="noaccount"><small>Don't have an Account?<a href="/views/adminregistration.hbs"><span
+                        <div class="noaccount"><small>Don't have an Account?<a href="adminregistration.hbs"><span
                                         style="padding-left: 10px;">Sign in</span></a></small></div>
                     </form>
                 </div>
