--- a/views/Adminlogin.hbs
+++ b/views/Adminlogin.hbs
@@ -105,7 +105,7 @@
                         </div>
                         <div class="form-group">
                             <i class="fa fa-id-card-o icon"></i>
-                            <input type="string" name="id" class="form-control input-field" id="exampleInputID1"
+                            <input type="string" name="empid" class="form-control input-field" id="exampleInputID1"
                                 placeholder="ID">
                         </div>
                         <div class="forgetpass"><a href="#">Forgot Password?</a></div>
