--- a/public/css/index.css
+++ b/public/css/index.css
@@ -7,11 +7,13 @@
     font-family: 'Poppins', sans-serif;
 }
 body{
+    background-image: url("/public/images/landing_page.png");
+    background-size: 100% 100%;
     min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #7697f1 !important;
+   
 }
 
 .button {
