modified:   views/adminside.hbs

--- a/views/adminside.hbs
+++ b/views/adminside.hbs
@@ -209,7 +209,8 @@
                                                             required>
                                                     </div>
                                                     <div class="form-group">
-                                                        <label for="holiday">Enter the count of Sundays</label>
+                                                        <label for="holiday">Enter the count of Holidays in
+                                                            month</label>
                                                         <input type="number" class="form-control" name="holiday"
                                                             id="holiday" placeholder="Enter the Holiday Count" required>
                                                     </div>
